--- a/index.html
+++ b/index.html
@@ -228,17 +228,17 @@
                     <legend>Ваше присутствие на торжестве</legend>
 
                     <label class="radio">
-                        <input type="radio" name="attendance" value="Да, с удовольствием, приду" required>
+                        <input type="radio" name="attendance" value="solo" required>
                         <span>Да, с удовольствием, приду</span>
                     </label>
 
                     <label class="radio">
-                        <input type="radio" name="attendance" value="Да, с удовольствием, приду+1" required>
+                        <input type="radio" name="attendance" value="plus1" required>
                         <span>Да, с удовольствием, приду+1</span>
                     </label>
 
                     <label class="radio">
-                        <input type="radio" name="attendance" value="К сожалению, не смогу присутствовать" required>
+                        <input type="radio" name="attendance" value="no" required>
                         <span>К сожалению, не смогу присутствовать</span>
                     </label>
                 </fieldset>
@@ -270,5 +270,6 @@
 
     <script src="./script.js"></script>
 </body>
+
 
 </html>
