--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Приглашение на свадьбу</title>
+    <title>Владислав & Елена — Приглашение</title>
+    <meta name="description" content="Электронное приглашение на свадьбу" />
 
     <!-- Шрифты (можешь заменить) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -273,3 +274,4 @@
 
 
 </html>
+
