--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Владислав & Елена — Приглашение</title>
     <meta name="description" content="Электронное приглашение на свадьбу" />
+    
+    <!-- Open Graph / Соцсети / Мессенджеры -->
+<meta property="og:type" content="website" />
+<meta property="og:site_name" content="Приглашение" />
+
+<meta property="og:title" content="Владислав & Елена — Приглашение" />
+<meta property="og:description" content="Электронное приглашение на свадьбу" />
+<meta property="og:url" content="https://foreverinvite.ru/" />
+<!-- <meta property="og:image" content="https://ksenifaiz.github.io/wedding-form1-/preview.jpg" /> -->
+
+<meta property="og:image:width" content="1200" />
+<meta property="og:image:height" content="630" />
+<!-- <meta property="og:image:type" content="image/jpeg" /> -->
+
+
 
     <!-- Шрифты (можешь заменить) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -274,4 +289,5 @@
 
 
 </html>
+
 
