--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
 <meta property="og:url" content="https://foreverinvite.ru/" />
 <!-- <meta property="og:image" content="https://ksenifaiz.github.io/wedding-form1-/preview.jpg" /> -->
 
-<meta property="og:image:width" content="1200" />
-<meta property="og:image:height" content="630" />
-<!-- <meta property="og:image:type" content="image/jpeg" /> -->
+<!-- Twitter / iMessage / fallback -->
+<meta name="twitter:card" content="summary" />
+<meta name="twitter:title" content="Владислав & Елена — Приглашение" />
+<meta name="twitter:description" content="Электронное приглашение на свадьбу" />
 
 
 
@@ -289,5 +290,6 @@
 
 
 </html>
+
 
 
