--- a/index.html
+++ b/index.html
@@ -7,16 +7,15 @@
     <title>Владислав & Елена — Приглашение</title>
     <meta name="description" content="Электронное приглашение на свадьбу" />
     
-    <!-- Open Graph / Соцсети / Мессенджеры -->
+  <!-- Open Graph / Соцсети / Мессенджеры -->
 <meta property="og:type" content="website" />
-<meta property="og:site_name" content="Приглашение" />
+<meta property="og:site_name" content="Forever Invite" />
 
 <meta property="og:title" content="Владислав & Елена — Приглашение" />
 <meta property="og:description" content="Электронное приглашение на свадьбу" />
 <meta property="og:url" content="https://foreverinvite.ru/" />
-<!-- <meta property="og:image" content="https://ksenifaiz.github.io/wedding-form1-/preview.jpg" /> -->
 
-<!-- Twitter / iMessage / fallback -->
+<!-- Twitter / iMessage / fallback (без картинки) -->
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:title" content="Владислав & Елена — Приглашение" />
 <meta name="twitter:description" content="Электронное приглашение на свадьбу" />
@@ -290,6 +289,7 @@
 
 
 </html>
+
 
 
 
